--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@ body {
   border: 3px solid #2e64c2;
 }
 
-#editor, #preview {
+#editor, 
+#preview {
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
@@ -55,7 +56,9 @@ body {
   line-height: 1.3;
 }
 
-#preview h1, #preview h2, #preview h3 {
+#preview h1, 
+#preview h2, 
+#preview h3 {
   border-bottom: 1px solid #236997;
   padding-bottom: 4px;
   margin-bottom: 10px;
@@ -90,7 +93,8 @@ body {
   margin-bottom: 10px;
 }
 
-#preview th, #preview td {
+#preview th, 
+#preview td {
   padding: 4px;
   border: 1px solid #1297c3;
   text-align: left;
@@ -104,7 +108,8 @@ body {
   border-left: 3px solid #ccc;
 }
 
-#preview ul, #preview ol {
+#preview ul, 
+#preview ol {
   margin-left: 12px;
   font-size: 0.8rem;
 }
@@ -114,7 +119,9 @@ body {
     width: 90%;
   }
 
-  .header, #editor, #preview {
+  .header, 
+  #editor, 
+  #preview {
     font-size: 0.7rem;
     padding: 5px;
   }
@@ -123,4 +130,3 @@ body {
     height: 100px;
   }
 }
-
